--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body {
 
 .button6 {
     background-color: #212121;
-    color: white;
+    color: blue;
     width: 250px;
     border-radius: 6px;
     border: 2px solid #212121;
