--- a/style.css
+++ b/style.css
@@ -85,11 +85,11 @@ body {
 }
 
 .button3 {
-    background-color: #7c7c7c;
+    background-color: #a5a5a5;
     color: black;
     width: 250px;
     border-radius: 6px;
-    border: 2px solid #7c7c7c;
+    border: 2px solid #a5a5a5;
 }
 
 .button3:hover {
